# mdcx

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  OLLAMA_TRANSLATION.md  README.md  build-action.ps1  build-conda.ps1  build-macos.sh  build-nuitka.ps1  build-uv.ps1  build.ps1  build.sh  changelog.md  changelog.ps1  changelog.sh  config.ini.default  fix_imports.py  main.py  mdcx.code-workspace  pyproject.toml  requirement-win.txt  requirements-mac.txt  requirements.txt  ruff.toml  schema.py  server.py  setup.py  test.py  test_ollama_translation.py  todo.md  up.ps1  upd.ps1
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report_cn.yaml  feature_request_cn.yaml
.github/workflows/: build-release-windows.yml  build.yml  ci.yaml  close-stale-issues.yml  docker-image.yml  release.py13.yml  release.v1.yml  release.yaml  release.yml
mdcx/: browser.py  consts.py  crawler.py  image.py  llm.py  manual.py  number.py  signals.py  web_async.py
mdcx/base/: file.py  image.py  number.py  translate.py  video.py  web.py  web_sync.py
mdcx/cli/: crawl.py
mdcx/cmd/: crawl.py  gen_enums.py
mdcx/config/: computed.py  enums.py  extend.py  manager.py  models.py  resources.py  ui_schema.py  v1.py
mdcx/controllers/: cut_window.py
mdcx/core/: file.py  file_crawler.py  image.py  nfo.py  scraper.py  translate.py  utils.py  web.py
mdcx/crawlers/: __init__.py  airav.py  airav_cc.py  avsex.py  avsox.py  base.py  cableav.py  cnmdb.py  dahlia.py  dmm.py  dmm_new.py  faleno.py  fantastica.py  fc2.py  fc2club.py  fc2hub.py  fc2ppvdb.py  freejavbt.py  getchu.py  getchu_dl.py  getchu_dmm.py  giga.py  guochan.py  hdouban.py  hscangku.py  iqqtv.py  iqqtv_new.py  jav321.py  javbus.py  javday.py  javdb.py  javdb_new.py  javlibrary.py  javlibrary_new.py  kin8.py  love6.py  lulubar.py  madouqu.py  mdtv.py  mgstage.py  (+8 more)
mdcx/models/: emby.py  enums.py  flags.py  json_data.py  log_buffer.py  types.py
mdcx/server/: config.py  dependencies.py  signals.py  var.py
mdcx/tools/: actress_db.py  crawl.py  emby_actor_image.py  emby_actor_info.py  gen_enums.py  missing.py  subtitle.py  wiki.py
mdcx/utils/: __init__.py  dataclass.py  file.py  gather_group.py  path.py  str.py  video.py
mdcx/views/: MDCx.py  MDCx.ui  posterCutTool.ui
resources/Img/: MDCx.icns
resources/c_number/: __get_c_number.py  c_number.json
resources/mapping_table/: mapping_actor.xml  mapping_info.xml
scripts/: 11-app-init.sh  build-action.ps1  build-macos.sh  build-nuitka.ps1  build-uv.ps1  build.py  build.sh  bump.py  changelog.py  extract.py  filter_map_xml.py  get-dev-info.sh  pyuic.sh  startapp.sh  up.ps1
src/views/: MDCx.py  (+4 more)
tests/: random_generator.py  test_config_conversion.py  test_path.py  test_str.py  test_ui_schema.py  test_utils.py  test_video.py
ui/: .env.example  .gitignore  biome.json  openapi-ts.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rsbuild.config.ts  tsconfig.json
userdata/: mapping_actor.xml
(+236 files in other folders)
