[project]
name = "mdcx"
version = "2.0.0"
description = "mdcx"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==24.1.0",
    "aiolimiter==1.2.1",
    "beautifulsoup4==4.13.4",
    "curl-cffi==0.11.4",
    "langid==1.1.6",
    "lxml==5.4.0",
    "openai==1.91.0",
    # 升级 opencv 以使用 numpy 2. numpy 1 在 3.13 无 wheel, 从 source 编译失败且耗时较长
    "opencv-contrib-python-headless~=4.12",
    "oshash==0.1.1",
    "pillow==11.3.0",
    "ping3==4.0.4",
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.2; sys_platform == 'win32'", # 更高版本无 Windows wheel
    "zhconv==1.4.3",
]

[project.optional-dependencies]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyinstaller>=6.14.2",
    "pyqt5-stubs>=5.15.6.0",
    "ruff>=0.12.5",
    "types-lxml>=2025.3.30",
]
